﻿V7.0: (Under development)
  * The support for Windows XP/2003 has been dropped (issue #707). This means:
    - We did not intentionally break XP support.
	- We do no longer test on Windows XP/2003
	- We may accept pull request for XP support if the code quality is sufficient.
	- We recommend to use the V6 branch on Windows XP
  * Fixed issue #758:  The OnColumnVisibilityChanged event is not always fired
  * Fixed issue #754: TBaseVirtualTree.InternalAddToSelection() may cause access violation. Thx@nminkov for the patch.
  * Fixed issue #753: TVirtualTreeColumns.EndUpdate() resets column order 
  * Fixed issue #750: Plus/Minus sizes are not scaled in DPI aware applications
  * Fixed issue #748: Per Monitor Dpi Scaling - Scrollbar Not Correct after Dpi Change
  * Enhancement #735: Add event that is fired when a check state is needed.
  * Fixed issue #743: Ugly drawing of selection in report mode when VCL Styles are used
  * Fixed issue #742: TVTHeader.ParentFont should be True by default
  * Fixed issue #740: TVTHeaderPopupMenu should not delete menu items added at designtime 
  * Fixed issue #739: TVTHeader should use a popup menu if assigned 
  * Fixed issue #738: Deadlock on application close in ReleaseThreadReference
  * Fixed issue #737: Export problem when OnBeforeNodeExport is not assigned 
  * Fixed issue #723: Turn event OnAfterNodeExport into a procedure. This is a BREAKING CHNAGE.
  * Fixed issue #734: DefaultText property ignored
  * Fixed issue #724: Error when reading "old" streams
  * Fixed issue #397: Horizontal autoscroll on focus does not properly scroll node into view if column width is larger than client width  
  * Fixed issue #727: Header not repainted after loading from stream
  * Fixed issue #726: Incorrect header hot painting
  * Fixed issue #722: Simplify custom header drawing while keeping default drawing
  * Fixed issue #467: Multi level checkboxes and BeginUpdate/EndUpdate issue